# AutoSoundMatch

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  asm-cli.py  pyproject.toml
src/config/: .registry.cfg  base.py  paths.py  registry_sections.py
src/config/fixtures/: default_signal_processing.py  genetic.py  mikamicro.py  mikamicro32.py  noisemaker.py  noisemaker32.py
src/config/fixtures/aiflowsynth/: README.md  ae.py  cnn.py  flowreg.py  mlp.py  resnet.py  signal_processing.py  u-he_diva.py  u-he_diva16.py  u-he_diva32.py  u-he_diva64.py  vae.py  vaeflow.py  wae.py
src/database/: base.py  dataset.py  factory.py
src/daw/: audio_model.py  base.py  factory.py  render_model.py  signal_processing.py  signal_transformers.py  synth_model.py
src/flow_synthesizer/: README.md  __init__.py  api.py  base.py  checkpoint.py  enums.py  factory.py
src/genetic/: base.py  evaluation.py  factory.py  pareto_front.py
src/graphics/: aggregate_loss.py  cli.py  inference_instance.py  latent_space.py
src/midi/: README.md  base.py  generation.py  partition.py  scales.json
src/utils/: README.md  code_generation.py  exceptions.py  flp_wrapper.py  loss_model.py  meta.py  signal_processing.py  temporary_context.py
src/utils/distributions/: base.py
