[tool.poetry]
name = "AutoSoundMatch"
version = "0.1.0"
description = "Library for automatically estimating synthesizer parameters to reproduce a given sound with support for polyphonic audio signals"
repository = "https://github.com/NValsted/AutoSoundMatch"
license = "GPL-3.0"
authors = ["Nicolaj Valsted"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
# dawdreamer = "^0.5.8.2"  # Docker image builds dawdreamer from source, because there are some issues with dawdreamer on PyPI https://github.com/DBraun/DawDreamer/issues/65
click = "^8.0.3"
colorama = "^0.4.4"
typer = "^0.4.0"
sqlmodel = "^0.0.6"
mido = "^1.2.10"
numpy = "1.21.*"
scipy = "^1.8.0rc4"
tqdm = "^4.62.3"
torch = [
    { url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]
librosa = "^0.9.1"

[tool.poetry.dev-dependencies]
six = "^1.16.0"
matplotlib = "^3.5.1"
ipython = "^8.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.isort]
skip = [".gitignore"]
skip_glob = ["src/flow_synthesizer/acids_ircam_flow_synthesizer/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
