[tool.poetry]
name = "AutoSoundMatch"
version = "0.1.0"
description = "Library for automatically estimating synthesizer parameters to reproduce a given sound with support for polyphonic audio signals"
repository = "https://github.com/NValsted/AutoSoundMatch"
license = "GPL-3.0"
authors = ["Nicolaj Valsted"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
# dawdreamer = "^0.5.8.2"  # Docker image builds dawdreamer from source, because there are some issues with dawdreamer on PyPI https://github.com/DBraun/DawDreamer/issues/65
click = "^8.0.3"
colorama = "^0.4.4"
typer = "^0.4.0"
sqlmodel = "^0.0.6"
mido = "^1.2.10"
numpy = "1.21.*"
scipy = "^1.8.0rc4"
tqdm = "^4.62.3"
librosa = "^0.9.1"
torch = "1.7.1"
torchaudio = "0.7.2"

[tool.poetry.dev-dependencies]
six = "^1.16.0"
matplotlib = "^3.5.1"
ipython = "^8.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
plotly = "^5.6.0"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"

[[tool.poetry.source]]
name = "torch_rep"
url = "https://eternalphane.github.io/pytorch-pypi"

[tool.isort]
skip = [".gitignore"]
skip_glob = ["src/flow_synthesizer/acids_ircam_flow_synthesizer/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
